--- a/Mcart/package.json
+++ b/Mcart/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@popperjs/core": "^2.11.5",
+    "ag-grid-angular": "^28.1.1",
+    "ag-grid-community": "^28.1.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "core-js": "^3.23.4",
